--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,8 @@
     <color name="colorPath">#FFFFFF</color>
     <color name="colorName">#ECECEC</color>
     <color name="colorBackgroud">#191926</color>
+    <color name="colorRedText">#FF3466</color>
+    <color name="colorTextGrey">#6D6D80</color>
+
 
 </resources>
