--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,6 +64,7 @@
 
     <style name="heading">
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#FFFFFF</item>
         <item name="android:letterSpacing">-0.01</item>
         <item name="android:shadowColor">#80000000</item>
         <item name="android:shadowDx">0</item>
