--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,5 +94,12 @@
         <item name="android:textSize">8sp</item>
         <item name="android:textColor">#565665</item>
     </style>
+    <style name="fmlStyleNameMovie">
+
+        <item name="android:textSize">
+            14sp
+        </item>
+
+    </style>
 
 </resources>
